--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color: lightgray;
+    background-color: #0a0a1f;
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -11,8 +13,27 @@ a {
     margin-top: 5vh;
 }
 
+.card {
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 25px;
+}
+
 .card-img-top {
-        width: 100%;
-        aspect-ratio: 16 / 12;
-        object-fit: cover;
+    width: 100%;
+    aspect-ratio: 16 / 12;
+    object-fit: cover;
+}
+
+#starfield {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
